<resources>
    <string name="app_name">FirstNavigation</string>
    <string name="welcome">欢迎登陆第一通航</string>
    <string name="code">|  获取验证码</string>
    <string name="selfMotion">未注册手机验证后自动登陆</string>
    <string name="me">我已同意并阅读</string>
    <string name="agreement">用户协议</string>
    <string name="strip">————————</string>
    <string name="tripartite">第三方账号登陆</string>
    <string name="username">请输入用户名</string>
    <string name="user">确认使用默认用户名</string>
    <string name="app">第一通航</string>
    <string name="jurisdiction">登陆后开发者将获得以下权限</string>
    <string name="message">获得你的公开信息(昵称、头像等)</string>
    <string name="queren">确认登陆</string>
    <string name="reprint">本文观点不代表第一通航立场，如有转载请联系原作者</string>
    <string name="upload">正在加载...</string>
    <string name="mypindao">我的频道</string>
    <string name="drag">长按可拖动排序</string>
    <string name="Recommend">频道推荐</string>
    <string name="add">点击添加频道</string>
    <string name="search">请输入关键字搜索</string>
    <string name="history">搜索历史</string>
    <string name="eliminate">清除历史</string>
    <string name="hot">热门搜索</string>
    <string name="share">点击链接查看分享内容</string>
    <string name="impor">我有话要说</string>
    <string name="publish">发表话题</string>
    <string name="select">选择话题标签</string>
    <string name="label">(合适的标签可以让更多的读者参与)</string>
    <string name="content">输入话题内容</string>
    <string name="custom">自定义标签</string>
    <string name="suoxuan">所选标签</string>
    <string name="tianjia">可选9张图片</string>
    <string name="name">登陆/注册</string>
    <string name="denglu">1秒登陆体验更多</string>
    <string name="xinxi">点击编辑个人信息</string>
    <string name="wifi">仅限WiFi网络下载图片</string>
    <string name="bianji">编辑个人信息</string>
    <string name="gengduo">关注更多通航号</string>
    <string name="zuiduo">评论内容最多150字</string>
    <string name="zhankai">展开更多最新评论</string>
    <string name="pinglun">展开更多最新点赞</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
