<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.firstnavigation.activitys.SanfangActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_cancel"
            android:text="取消"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_portrait"
        android:src="@drawable/bighead"
        android:layout_marginTop="@dimen/dp_73"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_gravity="center" />

    <TextView
        android:text="@string/app"
        android:layout_gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sp_30"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:background="@color/colorBlack"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_height="@dimen/dp_1"/>

    <TextView
        android:text="@string/jurisdiction"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_20"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/message"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_denglu"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@color/colorGreen"
        android:text="@string/queren"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
