<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.firstnavigation.activitys.information.TitleActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed">

        <ImageView
            android:id="@+id/iv_chacha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@mipmap/bigchaw" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mypindao"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dp_20" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_13"
            android:text="@string/drag" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_compile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_6"
                android:background="@drawable/compile_text"
                android:text="编辑"
                android:textColor="@color/colorBigRed" />
        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rlv_show"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/dp_23"
        android:background="@color/colorGray"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1" />

    <TextView
        android:layout_marginTop="@dimen/dp_14"
        android:layout_gravity="center"
        android:textColor="@color/colorBlack"
        android:text="@string/Recommend"
        android:textSize="@dimen/dp_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/add"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rlv_add"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
