<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linear"
    tools:context="com.example.firstnavigation.MainActivity">

    <ImageView
        android:id="@+id/image_cross"
        android:src="@mipmap/cross"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/welcome"
        android:layout_gravity="center"
        android:textSize="19dp"
        android:layout_marginTop="60dp"
        android:textColor="@color/colorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:hint="请输入手机号"
        android:maxLength="11"
        android:phoneNumber="true" />

   <FrameLayout
       android:layout_marginTop="20dp"
       android:layout_marginRight="20dp"
       android:layout_marginLeft="20dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <EditText
           android:id="@+id/et_Verification"
           android:hint="请输入验证码"
           android:maxLength="6"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           />
       <TextView
           android:id="@+id/tv_Verification"
           android:text="@string/code"
           android:layout_gravity="right"
           android:textColor="@color/colorBlack"
           android:layout_marginRight="20dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
   </FrameLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/selfMotion"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/bt_login"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/login2"
        android:saveEnabled="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cb_consent"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="“"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_agreement"
            android:textColor="@color/colorPrimary"
            android:text="@string/agreement"
            android:onClick="onViewClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="”"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ImageView
        android:layout_marginTop="160dp"
        android:src="@mipmap/tripartite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/wechat"
            android:src="@mipmap/umeng_socialize_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/qq"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:src="@mipmap/umeng_socialize_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/Sina"
            android:src="@mipmap/umeng_socialize_sina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
