<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.firstnavigation.activitys.topic.PublishActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/publish"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/tv_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/dp_15"
            android:text="发布"
            android:textColor="@color/colorPuhlish"
            android:textSize="@dimen/sp_17" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_19"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_19"
            android:text="@string/select"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_biaoqian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_19"
            android:layout_marginLeft="@dimen/dp_7_5"
            android:layout_marginTop="@dimen/dp_19"
            android:text="@string/label"
            android:textSize="@dimen/sp_12" />

        <ImageView
            android:id="@+id/iv_jump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_19"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_19"
            android:src="@mipmap/jump" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/colorGray" />

    <EditText
        android:id="@+id/ed_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_210"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/picture" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/topic_vedio" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:src="@mipmap/topic_link" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rlv_recyc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_tianjia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="22dp"
                    app:srcCompat="@mipmap/topic_add_image" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/iv_tianjia"
                    android:layout_alignLeft="@+id/iv_tianjia"
                    android:layout_alignRight="@+id/iv_tianjia"
                    android:layout_alignStart="@+id/iv_tianjia"
                    android:layout_below="@+id/iv_tianjia"
                    android:layout_marginTop="16dp"
                    android:text="@string/tianjia" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
