<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linear"
    tools:context="com.example.firstnavigation.activitys.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:minHeight="?android:actionBarSize">

        <EditText
            android:id="@+id/search_edit"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@drawable/tool"
            android:cursorVisible="true"
            android:drawableLeft="@mipmap/search"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="请输入关键词搜索"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/search_text_quxiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/dp_10"
            android:text="取消"
            android:textColor="#ffffff"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_marginTop="@dimen/dp_40"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_55">
            <TextView
                android:id="@+id/search_qingkong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/colorBlack"
                android:text="清空"
                android:visibility="gone" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/id_wenzhang"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/history"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:textSize="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_eliminate"
                android:text="@string/eliminate"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:textSize="@dimen/dp_20"
                android:textColor="@color/colorBlack"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rlv_history"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="@dimen/dp_0_5"
            android:background="@color/colorGray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1" />

        <TextView
            android:text="@string/hot"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:textSize="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rlv_hot"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_article"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.TabLayout
            android:id="@+id/tab"
            app:tabSelectedTextColor="@color/colorBigRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <android.support.v4.view.ViewPager
            android:id="@+id/vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>
