<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.firstnavigation.activitys.topic.ParticularsTopicActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_15"
            android:src="@mipmap/menu" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_7_5"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_user_head"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/hot"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_guanzhu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_15"
                android:textColor="@color/colorWhite"
                android:background="@drawable/btn_yuan"
                android:text="关注" />
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_7_5"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_7_5"
                android:text="@string/search"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_17" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rlv_iamge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_7_5"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_7_5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_like"
                        android:layout_width="@dimen/dp_200"
                        android:layout_height="@dimen/dp_50"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:src="@drawable/particulars_like" />
                    <TextView
                        android:id="@+id/tv_like"
                        android:layout_width="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="57dp"
                        android:layout_marginStart="57dp"
                        android:text="11" />



                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_25"
                android:background="@color/colorGray" />

            <TextView
                android:id="@+id/tv_strip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_15"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp_17" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/colorGray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rlv_discuss"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_7_5"
                android:background="@color/colorGray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_7_5"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_7_5"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/fenxiang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/fenxiang" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_7_5"
                        android:text="分享" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pinglun"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/pinglun" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_7_5"
                        android:text="评论" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shoucang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivShoucang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/news_like" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_7_5"
                        android:text="收藏" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
